{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 85,
  "lineage": "2908567e-fd61-880b-31ea-f100b46586a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-062cddb9d94dcf95d",
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:instance/i-0a60c12516c177717",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a60c12516c177717",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8ee4dfa0d740142",
            "private_dns": "ip-10-0-1-147.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c7827003f604bcfa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-090a34adddada4034"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fc0f97040686966",
            "tags": {
              "Name": "ec2"
            },
            "tags_all": {
              "Name": "ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090a34adddada4034"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:security-group/sg-090a34adddada4034",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-090a34adddada4034",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "026668750147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:security-group-rule/sgr-01ad70c1516280fbd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01ad70c1516280fbd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-090a34adddada4034",
            "security_group_rule_id": "sgr-01ad70c1516280fbd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:security-group-rule/sgr-09482ecae33213895",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09482ecae33213895",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-090a34adddada4034",
            "security_group_rule_id": "sgr-09482ecae33213895",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:network-acl/acl-0932dd2efefa21f58",
            "default_network_acl_id": "acl-0932dd2efefa21f58",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0932dd2efefa21f58",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "026668750147",
            "subnet_ids": [
              "subnet-004c6c4c7f9078215",
              "subnet-02064c5eaa0fbd677",
              "subnet-04fd76db525730c3a",
              "subnet-08fc0f97040686966",
              "subnet-0b9dcd7d7bc99173e",
              "subnet-0f58efc1a6178ed8a"
            ],
            "tags": {
              "Name": "private-vpc-default",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-default",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:route-table/rtb-0836ba4c37e5b0a43",
            "default_route_table_id": "rtb-0836ba4c37e5b0a43",
            "id": "rtb-0836ba4c37e5b0a43",
            "owner_id": "026668750147",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "private-vpc-default",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-default",
              "vpc": "bastion-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:security-group/sg-0984f380c5d45ed38",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0984f380c5d45ed38",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "026668750147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-vpc-default",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-default",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:internet-gateway/igw-0d3cf13b4fbc57ddf",
            "id": "igw-0d3cf13b4fbc57ddf",
            "owner_id": "026668750147",
            "tags": {
              "Name": "private-vpc",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d3cf13b4fbc57ddf",
            "id": "r-rtb-071024475ff660dea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071024475ff660dea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:route-table/rtb-05b9844778040b897",
            "id": "rtb-05b9844778040b897",
            "owner_id": "026668750147",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-vpc-private-ap-northeast-2a",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-private-ap-northeast-2a",
              "vpc": "bastion-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:route-table/rtb-02650034273c8c0a3",
            "id": "rtb-02650034273c8c0a3",
            "owner_id": "026668750147",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-vpc-private-ap-northeast-2b",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-private-ap-northeast-2b",
              "vpc": "bastion-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:route-table/rtb-004e5ccf29d2904d3",
            "id": "rtb-004e5ccf29d2904d3",
            "owner_id": "026668750147",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-vpc-private-ap-northeast-2c",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-private-ap-northeast-2c",
              "vpc": "bastion-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:route-table/rtb-071024475ff660dea",
            "id": "rtb-071024475ff660dea",
            "owner_id": "026668750147",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-vpc-public",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-public",
              "vpc": "bastion-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0191ace52f30e47fb",
            "route_table_id": "rtb-05b9844778040b897",
            "subnet_id": "subnet-08fc0f97040686966"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba060e731c1bbf89",
            "route_table_id": "rtb-02650034273c8c0a3",
            "subnet_id": "subnet-0b9dcd7d7bc99173e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a34f875cc24a7837",
            "route_table_id": "rtb-004e5ccf29d2904d3",
            "subnet_id": "subnet-02064c5eaa0fbd677"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b68a0adef27d12a6",
            "route_table_id": "rtb-071024475ff660dea",
            "subnet_id": "subnet-04fd76db525730c3a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d21d67c8d58586fe",
            "route_table_id": "rtb-071024475ff660dea",
            "subnet_id": "subnet-0f58efc1a6178ed8a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027cb8a5d9b5c0bda",
            "route_table_id": "rtb-071024475ff660dea",
            "subnet_id": "subnet-004c6c4c7f9078215"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:subnet/subnet-08fc0f97040686966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fc0f97040686966",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026668750147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-vpc-private-ap-northeast-2a",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-private-ap-northeast-2a",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:subnet/subnet-0b9dcd7d7bc99173e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9dcd7d7bc99173e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026668750147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-vpc-private-ap-northeast-2b",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-private-ap-northeast-2b",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:subnet/subnet-02064c5eaa0fbd677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02064c5eaa0fbd677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026668750147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-vpc-private-ap-northeast-2c",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-private-ap-northeast-2c",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:subnet/subnet-04fd76db525730c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd76db525730c3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026668750147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-vpc-public-ap-northeast-2a",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-public-ap-northeast-2a",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:subnet/subnet-0f58efc1a6178ed8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f58efc1a6178ed8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026668750147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-vpc-public-ap-northeast-2b",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-public-ap-northeast-2b",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:subnet/subnet-004c6c4c7f9078215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004c6c4c7f9078215",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026668750147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-vpc-public-ap-northeast-2c",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc-public-ap-northeast-2c",
              "vpc": "bastion-vpc"
            },
            "vpc_id": "vpc-0979f316f80e077cc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:vpc/vpc-0979f316f80e077cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0932dd2efefa21f58",
            "default_route_table_id": "rtb-0836ba4c37e5b0a43",
            "default_security_group_id": "sg-0984f380c5d45ed38",
            "dhcp_options_id": "dopt-0b8dee261220de5b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0979f316f80e077cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0836ba4c37e5b0a43",
            "owner_id": "026668750147",
            "tags": {
              "Name": "private-vpc",
              "vpc": "bastion-vpc"
            },
            "tags_all": {
              "Name": "private-vpc",
              "vpc": "bastion-vpc"
            }
          }
        }
      ]
    }
  ]
}